--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-src/assets/json/seoulGeo/AL_11_D162_20200917.json filter=lfs diff=lfs merge=lfs -text
+src/assets/json/seoulGeo/AL_11_D162_20200917.geojson filter=lfs diff=lfs merge=lfs -text
