--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@d3/versor-dragging": "https://api.observablehq.com/@d3/versor-dragging.tgz?v=3",
+    "@observablehq/runtime": "^4.8.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "json-loader": "^0.5.7",
